# comm-24sessions

./: Cargo.toml  config.sample.toml
attribute-ui/: config.js  index.html
attribute-ui/src/: index.scss
attribute-ui/src/components/: App.tsx  AttributeCard.tsx  AttributeList.tsx  AttributesPage.tsx  Layout.tsx  LoginNotice.tsx  PoweredBy.tsx  Unauthorized.tsx
src/: main.rs
