[package]
name = "id-contact-24sessions"
authors = ["Henk Dieter Oordt <hd@oordt.dev>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-contact-sentry = { git = "https://github.com/id-contact/id-contact-sentry.git" }
id-contact-jwt = { git = "https://github.com/id-contact/id-contact-jwt.git" }
id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" }
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
serde = "1.0.123"
serde_json = "1.0.61"
reqwest = {version = "0.11.3", features = ["json"]}
rocket_oauth2 = "0.5.0-rc.1"

[dependencies.id-contact-comm-common]
git = "https://github.com/id-contact/comm-common.git"
rev = "036bf33c10cad4292acec64c5b533dab35dd2e3e"
features = ["auth_during_comm", "session_db"]
